--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Back End Assessment</title>
-  </head>
-  <body class="container">
-    <button id="complimentButton">Get a compliment</button>
-    <button id="fortuneButton">Get a fortune</button>
 
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="main.js"></script>
-    
-  </body>
+<head>
+  <title>Back End Assessment</title>
+</head>
+
+<body class="container">
+  <h2>Gratitude Journal</h2>
+  <form>
+    <div>
+      <label for="gratitude">What are you grateful for?</label>
+      <br>
+      <br>
+      <input type="text" id="gratitude" name="gratitude">
+      <button type="submit" id="submit-gratitude-btn">Submit</button>
+    </div>
+  </form>
+  <div>
+    <br>
+    <label for="date-select">View entries from:</label>
+    <select id="date-select" onchange="getGratitudeEntriesByDate()">
+      <option value="">Select a date</option>
+      <option value="2023-04-29">April 29, 2023</option>
+
+    </select>
+  </div>
+  <h3>Journal Entries</h3>
+  <ul id="journal-entries">
+  </ul>
+
+  <br><br><br>
+  <button id="complimentButton">Get a compliment</button>
+  <button id="fortuneButton">Get a fortune</button>
+  
+
+
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="main.js"></script>
+
+</body>
+
 </html>
