decided to switch back to implementing gratitude journal but still need to implement other requests such as put and delete

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body class="container">
-  <!-- <h2>Gratitude Journal</h2>
+  <h2>Gratitude Journal</h2>
   <form>
     <div>
       <label for="gratitude">What are you grateful for?</label>
@@ -27,11 +27,11 @@
   <ul id="journal-entries">
   </ul>
 
-  <br><br><br> -->
+  <br><br><br>
   <button id="complimentButton">Get a compliment</button>
   <button id="fortuneButton">Get a fortune</button>
   
-  <ol id="fortune-list"></ol>
+  <!-- <ol id="fortune-list"></ol> -->
 
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
