there was a bug somewhere so had to line by line on each file to find out what was causing issue and changed some code

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
   <div>
     <br>
     <label for="date-select">View entries from:</label>
-    <select id="date-select" onchange="getGratitudeEntriesByDate()">
+    <select id="date-select">
       <option value="">Select a date</option>
     </select>
   </div>
@@ -30,7 +30,7 @@
   <br><br><br>
   <button id="complimentButton">Get a compliment</button>
   <button id="fortuneButton">Get a fortune</button>
-  
+
   <!-- <ol id="fortune-list"></ol> -->
 
 
