trying to implement delete, put, get entries by date

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
     <br>
     <label for="date-select">View entries from:</label>
     <select id="date-select">
-      <option value="">Select a date</option>
+      <!-- <option value="">Select a date</option> -->
     </select>
   </div>
   <h3>Journal Entries</h3>
